fix horizontal scroll and mobile menu bottom margin

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -127,7 +127,7 @@ body {
 
 
 .dropdown-menu{
-    @apply  h-full w-full overflow-y-hidden lg:overflow-hidden lg:flex lg:justify-end items-center
+    @apply  h-full w-full overflow-hidden lg:overflow-hidden lg:flex lg:justify-end items-center
 }
 
 .dropdown-menu-show{
